// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#303030",
      "height": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "width": "80%",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "#ffd600",
              "fontSize": 41.0958904109589,
              "fontWeight": "900",
              "textAlign": "center",
            }
          }
        >
          Temper
        </Text>
        <Text
          style={
            Object {
              "color": "#ffd600",
              "fontSize": 30.821917808219176,
              "textAlign": "center",
            }
          }
        >
          @pghtemper
        </Text>
        <Text
          style={
            Object {
              "color": "#ffd600",
              "fontSize": 41.0958904109589,
              "fontWeight": "900",
              "textAlign": "center",
            }
          }
        >
          3
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#ababab",
            "flex": 1,
            "fontSize": 30.821917808219176,
            "fontWeight": "900",
            "marginTop": 20,
            "textAlign": "center",
          }
        }
      >
        Game to 
        15
      </Text>
      <View>
        <Text
          style={
            Object {
              "color": "#ffd600",
              "fontSize": 41.0958904109589,
              "fontWeight": "900",
              "textAlign": "center",
            }
          }
        >
          Sockeye
        </Text>
        <Text
          style={
            Object {
              "color": "#ffd600",
              "fontSize": 30.821917808219176,
              "textAlign": "center",
            }
          }
        >
          
        </Text>
        <Text
          style={
            Object {
              "color": "#ffd600",
              "fontSize": 41.0958904109589,
              "fontWeight": "900",
              "textAlign": "center",
            }
          }
        >
          0
        </Text>
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#ababab",
          "fontSize": 61.64383561643835,
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      7
       players on next
      

      O 
      point
    </Text>
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
      data={
        Array [
          Object {
            "firstName": "First 1",
            "lastName": "Last 1",
          },
          Object {
            "firstName": "First 2",
            "lastName": "Last 2",
          },
          Object {
            "firstName": "First 3",
            "lastName": "Last 3",
          },
          Object {
            "firstName": "First 4",
            "lastName": "Last 4",
          },
          Object {
            "firstName": "First 5",
            "lastName": "Last 5",
          },
          Object {
            "firstName": "First 6",
            "lastName": "Last 6",
          },
          Object {
            "firstName": "First 7",
            "lastName": "Last 7",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      viewabilityConfigCallbackPairs={Array []}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "#303030",
                "borderColor": "rgba(171, 171, 171, 0.29)",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 2,
                "elevation": 0,
                "flexDirection": "column",
                "margin": 5,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "disabled": false,
                  "selected": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 8,
                    },
                    Object {
                      "flexGrow": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "paddingLeft": 4,
                      "position": "relative",
                    },
                    Object {
                      "paddingRight": 4,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "marginVertical": 4,
                          "minHeight": 24,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "color": "rgba(171, 171, 171, 0.87)",
                          "fontFamily": "System",
                          "fontWeight": "400",
                          "marginLeft": 8,
                          "marginRight": 8,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  First 1
                   
                  Last 1
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "#303030",
                "borderColor": "rgba(171, 171, 171, 0.29)",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 2,
                "elevation": 0,
                "flexDirection": "column",
                "margin": 5,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "disabled": false,
                  "selected": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 8,
                    },
                    Object {
                      "flexGrow": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "paddingLeft": 4,
                      "position": "relative",
                    },
                    Object {
                      "paddingRight": 4,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "marginVertical": 4,
                          "minHeight": 24,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "color": "rgba(171, 171, 171, 0.87)",
                          "fontFamily": "System",
                          "fontWeight": "400",
                          "marginLeft": 8,
                          "marginRight": 8,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  First 2
                   
                  Last 2
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "#303030",
                "borderColor": "rgba(171, 171, 171, 0.29)",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 2,
                "elevation": 0,
                "flexDirection": "column",
                "margin": 5,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "disabled": false,
                  "selected": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 8,
                    },
                    Object {
                      "flexGrow": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "paddingLeft": 4,
                      "position": "relative",
                    },
                    Object {
                      "paddingRight": 4,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "marginVertical": 4,
                          "minHeight": 24,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "color": "rgba(171, 171, 171, 0.87)",
                          "fontFamily": "System",
                          "fontWeight": "400",
                          "marginLeft": 8,
                          "marginRight": 8,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  First 3
                   
                  Last 3
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "#303030",
                "borderColor": "rgba(171, 171, 171, 0.29)",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 2,
                "elevation": 0,
                "flexDirection": "column",
                "margin": 5,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "disabled": false,
                  "selected": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 8,
                    },
                    Object {
                      "flexGrow": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "paddingLeft": 4,
                      "position": "relative",
                    },
                    Object {
                      "paddingRight": 4,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "marginVertical": 4,
                          "minHeight": 24,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "color": "rgba(171, 171, 171, 0.87)",
                          "fontFamily": "System",
                          "fontWeight": "400",
                          "marginLeft": 8,
                          "marginRight": 8,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  First 4
                   
                  Last 4
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "#303030",
                "borderColor": "rgba(171, 171, 171, 0.29)",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 2,
                "elevation": 0,
                "flexDirection": "column",
                "margin": 5,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "disabled": false,
                  "selected": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 8,
                    },
                    Object {
                      "flexGrow": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "paddingLeft": 4,
                      "position": "relative",
                    },
                    Object {
                      "paddingRight": 4,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "marginVertical": 4,
                          "minHeight": 24,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "color": "rgba(171, 171, 171, 0.87)",
                          "fontFamily": "System",
                          "fontWeight": "400",
                          "marginLeft": 8,
                          "marginRight": 8,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  First 5
                   
                  Last 5
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "#303030",
                "borderColor": "rgba(171, 171, 171, 0.29)",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 2,
                "elevation": 0,
                "flexDirection": "column",
                "margin": 5,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "disabled": false,
                  "selected": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 8,
                    },
                    Object {
                      "flexGrow": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "paddingLeft": 4,
                      "position": "relative",
                    },
                    Object {
                      "paddingRight": 4,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "marginVertical": 4,
                          "minHeight": 24,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "color": "rgba(171, 171, 171, 0.87)",
                          "fontFamily": "System",
                          "fontWeight": "400",
                          "marginLeft": 8,
                          "marginRight": 8,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  First 6
                   
                  Last 6
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "#303030",
                "borderColor": "rgba(171, 171, 171, 0.29)",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 2,
                "elevation": 0,
                "flexDirection": "column",
                "margin": 5,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "disabled": false,
                  "selected": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 8,
                    },
                    Object {
                      "flexGrow": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "paddingLeft": 4,
                      "position": "relative",
                    },
                    Object {
                      "paddingRight": 4,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "marginVertical": 4,
                          "minHeight": 24,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "color": "rgba(171, 171, 171, 0.87)",
                          "fontFamily": "System",
                          "fontWeight": "400",
                          "marginLeft": 8,
                          "marginRight": 8,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  First 7
                   
                  Last 7
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "#ffd600",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0.5,
          "elevation": 0,
          "marginTop": 10,
          "minWidth": 64,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 4,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <Text
            numberOfLines={1}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "letterSpacing": 1,
                    "marginHorizontal": 16,
                    "marginVertical": 9,
                    "textAlign": "center",
                  },
                  undefined,
                  Object {
                    "textTransform": "uppercase",
                  },
                  Object {
                    "color": "#ffd600",
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  Object {
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  undefined,
                ],
              ]
            }
          >
            add guest
          </Text>
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "#ababab",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0,
          "elevation": 0,
          "marginTop": 10,
          "minWidth": "auto",
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 4,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <Text
            numberOfLines={1}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "letterSpacing": 1,
                    "marginHorizontal": 16,
                    "marginVertical": 9,
                    "textAlign": "center",
                  },
                  Object {
                    "marginHorizontal": 8,
                  },
                  Object {
                    "textTransform": "uppercase",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.32)",
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  Object {
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  undefined,
                ],
              ]
            }
          >
            start
          </Text>
        </View>
      </View>
    </View>
    <Modal
      animationType="slide"
      hardwareAccelerated={false}
      onRequestClose={[Function]}
      testID="base-modal"
      transparent={true}
      visible={false}
    />
  </View>
</RCTSafeAreaView>
`;

exports[`should match snapshot for team two 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#303030",
      "height": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "width": "80%",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
        }
      }
    >
      <View>
        <Text
          style={
            Object {
              "color": "#ffd600",
              "fontSize": 41.0958904109589,
              "fontWeight": "900",
              "textAlign": "center",
            }
          }
        >
          Temper
        </Text>
        <Text
          style={
            Object {
              "color": "#ffd600",
              "fontSize": 30.821917808219176,
              "textAlign": "center",
            }
          }
        >
          @pghtemper
        </Text>
        <Text
          style={
            Object {
              "color": "#ffd600",
              "fontSize": 41.0958904109589,
              "fontWeight": "900",
              "textAlign": "center",
            }
          }
        >
          3
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#ababab",
            "flex": 1,
            "fontSize": 30.821917808219176,
            "fontWeight": "900",
            "marginTop": 20,
            "textAlign": "center",
          }
        }
      >
        Game to 
        15
      </Text>
      <View>
        <Text
          style={
            Object {
              "color": "#ffd600",
              "fontSize": 41.0958904109589,
              "fontWeight": "900",
              "textAlign": "center",
            }
          }
        >
          Sockeye
        </Text>
        <Text
          style={
            Object {
              "color": "#ffd600",
              "fontSize": 30.821917808219176,
              "textAlign": "center",
            }
          }
        >
          
        </Text>
        <Text
          style={
            Object {
              "color": "#ffd600",
              "fontSize": 41.0958904109589,
              "fontWeight": "900",
              "textAlign": "center",
            }
          }
        >
          0
        </Text>
      </View>
    </View>
    <Text
      style={
        Object {
          "color": "#ababab",
          "fontSize": 61.64383561643835,
          "marginBottom": 10,
          "textAlign": "center",
        }
      }
    >
      7
       players on next
      

      O 
      point
    </Text>
    <RCTScrollView
      contentContainerStyle={
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
        }
      }
      data={
        Array [
          Object {
            "firstName": "First 8",
            "lastName": "Last 8",
          },
          Object {
            "firstName": "First 9",
            "lastName": "Last 9",
          },
          Object {
            "firstName": "First 10",
            "lastName": "Last 10",
          },
          Object {
            "firstName": "First 11",
            "lastName": "Last 11",
          },
          Object {
            "firstName": "First 12",
            "lastName": "Last 12",
          },
          Object {
            "firstName": "First 13",
            "lastName": "Last 13",
          },
          Object {
            "firstName": "First 14",
            "lastName": "Last 14",
          },
        ]
      }
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      viewabilityConfigCallbackPairs={Array []}
    >
      <View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "#303030",
                "borderColor": "rgba(171, 171, 171, 0.29)",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 2,
                "elevation": 0,
                "flexDirection": "column",
                "margin": 5,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "disabled": false,
                  "selected": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 8,
                    },
                    Object {
                      "flexGrow": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "paddingLeft": 4,
                      "position": "relative",
                    },
                    Object {
                      "paddingRight": 4,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "marginVertical": 4,
                          "minHeight": 24,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "color": "rgba(171, 171, 171, 0.87)",
                          "fontFamily": "System",
                          "fontWeight": "400",
                          "marginLeft": 8,
                          "marginRight": 8,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  First 8
                   
                  Last 8
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "#303030",
                "borderColor": "rgba(171, 171, 171, 0.29)",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 2,
                "elevation": 0,
                "flexDirection": "column",
                "margin": 5,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "disabled": false,
                  "selected": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 8,
                    },
                    Object {
                      "flexGrow": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "paddingLeft": 4,
                      "position": "relative",
                    },
                    Object {
                      "paddingRight": 4,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "marginVertical": 4,
                          "minHeight": 24,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "color": "rgba(171, 171, 171, 0.87)",
                          "fontFamily": "System",
                          "fontWeight": "400",
                          "marginLeft": 8,
                          "marginRight": 8,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  First 9
                   
                  Last 9
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "#303030",
                "borderColor": "rgba(171, 171, 171, 0.29)",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 2,
                "elevation": 0,
                "flexDirection": "column",
                "margin": 5,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "disabled": false,
                  "selected": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 8,
                    },
                    Object {
                      "flexGrow": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "paddingLeft": 4,
                      "position": "relative",
                    },
                    Object {
                      "paddingRight": 4,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "marginVertical": 4,
                          "minHeight": 24,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "color": "rgba(171, 171, 171, 0.87)",
                          "fontFamily": "System",
                          "fontWeight": "400",
                          "marginLeft": 8,
                          "marginRight": 8,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  First 10
                   
                  Last 10
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "#303030",
                "borderColor": "rgba(171, 171, 171, 0.29)",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 2,
                "elevation": 0,
                "flexDirection": "column",
                "margin": 5,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "disabled": false,
                  "selected": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 8,
                    },
                    Object {
                      "flexGrow": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "paddingLeft": 4,
                      "position": "relative",
                    },
                    Object {
                      "paddingRight": 4,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "marginVertical": 4,
                          "minHeight": 24,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "color": "rgba(171, 171, 171, 0.87)",
                          "fontFamily": "System",
                          "fontWeight": "400",
                          "marginLeft": 8,
                          "marginRight": 8,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  First 11
                   
                  Last 11
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "#303030",
                "borderColor": "rgba(171, 171, 171, 0.29)",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 2,
                "elevation": 0,
                "flexDirection": "column",
                "margin": 5,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "disabled": false,
                  "selected": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 8,
                    },
                    Object {
                      "flexGrow": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "paddingLeft": 4,
                      "position": "relative",
                    },
                    Object {
                      "paddingRight": 4,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "marginVertical": 4,
                          "minHeight": 24,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "color": "rgba(171, 171, 171, 0.87)",
                          "fontFamily": "System",
                          "fontWeight": "400",
                          "marginLeft": 8,
                          "marginRight": 8,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  First 12
                   
                  Last 12
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "#303030",
                "borderColor": "rgba(171, 171, 171, 0.29)",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 2,
                "elevation": 0,
                "flexDirection": "column",
                "margin": 5,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "disabled": false,
                  "selected": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 8,
                    },
                    Object {
                      "flexGrow": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "paddingLeft": 4,
                      "position": "relative",
                    },
                    Object {
                      "paddingRight": 4,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "marginVertical": 4,
                          "minHeight": 24,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "color": "rgba(171, 171, 171, 0.87)",
                          "fontFamily": "System",
                          "fontWeight": "400",
                          "marginLeft": 8,
                          "marginRight": 8,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  First 13
                   
                  Last 13
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            collapsable={false}
            style={
              Object {
                "backgroundColor": "#303030",
                "borderColor": "rgba(171, 171, 171, 0.29)",
                "borderRadius": 8,
                "borderStyle": "solid",
                "borderWidth": 2,
                "elevation": 0,
                "flexDirection": "column",
                "margin": 5,
              }
            }
          >
            <View
              accessibilityRole="button"
              accessibilityState={
                Object {
                  "disabled": false,
                  "selected": false,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Array [
                    Object {
                      "borderRadius": 8,
                    },
                    Object {
                      "flexGrow": 1,
                    },
                  ],
                ]
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "flexGrow": 1,
                      "paddingLeft": 4,
                      "position": "relative",
                    },
                    Object {
                      "paddingRight": 4,
                    },
                  ]
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#000000",
                        "fontFamily": "System",
                        "fontWeight": "400",
                      },
                      Object {
                        "textAlign": "left",
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "marginVertical": 4,
                          "minHeight": 24,
                          "textAlignVertical": "center",
                        },
                        Object {
                          "color": "rgba(171, 171, 171, 0.87)",
                          "fontFamily": "System",
                          "fontWeight": "400",
                          "marginLeft": 8,
                          "marginRight": 8,
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  First 14
                   
                  Last 14
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "transparent",
          "borderColor": "#ffd600",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0.5,
          "elevation": 0,
          "marginTop": 10,
          "minWidth": 64,
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 4,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <Text
            numberOfLines={1}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "letterSpacing": 1,
                    "marginHorizontal": 16,
                    "marginVertical": 9,
                    "textAlign": "center",
                  },
                  undefined,
                  Object {
                    "textTransform": "uppercase",
                  },
                  Object {
                    "color": "#ffd600",
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  Object {
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  undefined,
                ],
              ]
            }
          >
            add guest
          </Text>
        </View>
      </View>
    </View>
    <View
      collapsable={false}
      style={
        Object {
          "backgroundColor": "#ababab",
          "borderColor": "transparent",
          "borderRadius": 4,
          "borderStyle": "solid",
          "borderWidth": 0,
          "elevation": 0,
          "marginTop": 10,
          "minWidth": "auto",
        }
      }
    >
      <View
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": true,
          }
        }
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "borderRadius": 4,
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <Text
            numberOfLines={1}
            selectable={false}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "System",
                  "fontWeight": "400",
                },
                Object {
                  "textAlign": "left",
                },
                Array [
                  Object {
                    "letterSpacing": 1,
                    "marginHorizontal": 16,
                    "marginVertical": 9,
                    "textAlign": "center",
                  },
                  Object {
                    "marginHorizontal": 8,
                  },
                  Object {
                    "textTransform": "uppercase",
                  },
                  Object {
                    "color": "rgba(0, 0, 0, 0.32)",
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  Object {
                    "fontFamily": "System",
                    "fontWeight": "500",
                  },
                  undefined,
                ],
              ]
            }
          >
            start
          </Text>
        </View>
      </View>
    </View>
    <Modal
      animationType="slide"
      hardwareAccelerated={false}
      onRequestClose={[Function]}
      testID="base-modal"
      transparent={true}
      visible={false}
    />
  </View>
</RCTSafeAreaView>
`;
